@@ -31,6 +31,9 @@
 	.package.conf. Substitute into the .cabal files as well as the package
 	files.
 
+	* docs/tools/AddLinks.hs: Add support for 'ordinary' html, rather than
+	xhtml. Currently doesn't do much highliting.
+
 2005-07-23 Duncan Coutts <duncan@coutts.uklinux.net>
 
 	* gtk/Graphics/UI/Gtk/General/General.chs,
